# csv-analyst-agent

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
src/csv_analyst/: __init__.py  cli.py  config.py  pipeline.py
src/csv_analyst/agents/: __init__.py  analyser.py
src/csv_analyst/models/: __init__.py  schemas.py
src/csv_analyst/tools/: __init__.py  charts.py  stats.py
